src/Parser.hs
{-# LANGUAGE NoImplicitPrelude #-}

--
-- Parser
--

module Parser (
  rNPhoton
, rProgressive
, rXresolution
, rYresolution
, rAntialias
, rSamplePhoton
, rMapDivision
, rEstimateRadius
, rAmbient
, rMaxRadiance
, rEyePosition
, rTargetPosition
, rUpperDirection
, rFocus
, rPhotonFilter
, Param
, removeComment
, sline
, world
, parse
) where

import           Data.Array.Unboxed
import qualified Data.Map.Strict                      as M
import           Data.Maybe
import qualified Data.Vector                          as V
import           Text.ParserCombinators.Parsec
import qualified Text.ParserCombinators.Parsec.Char   as PC
import qualified Text.ParserCombinators.Parsec.Number as PN
--import           Text.Parsec
--import qualified Text.Parsec.Char   as PC
--import qualified Text.Parsec.Number as PN
import           NumericPrelude

import Ray.Algebra
import Ray.Geometry
import Ray.Light
import Ray.Mapper
import Ray.Material
import Ray.Object
import Ray.Optics
import Ray.Physics
import Ray.Surface

--
-- RESERVED WORD
--

rAlbedoDiff :: String
rAlbedoDiff = "albedo_diff"

rAlbedoSpec :: String
rAlbedoSpec = "albedo_spec"

rAmbient :: String
rAmbient = "ambient"

rAntialias :: String
rAntialias = "antialias"

rCenter :: String
rCenter = "center"

rChecker :: String
rChecker = "checker"

rColor :: String
rColor = "color"

rDiffuseness :: String
rDiffuseness = "diffuseness"

rDir1 :: String
rDir1 = "dir1"

rDir2 :: String
rDir2 = "dir2"

rDirection :: String
rDirection = "direction"

rDirectivity :: String
rDirectivity = "directivity"

rEmittance :: String
rEmittance = "emittance"

rEstimateRadius :: String
rEstimateRadius = "estimateradius"

rEyePosition :: String
rEyePosition = "eyeposition"

rFlux :: String
rFlux = "flux"

rFocus :: String
rFocus = "focus"

rIor :: String
rIor = "ior"

rLdir :: String
rLdir = "ldir"

rLight :: String
rLight = "light"

rLightSpec :: String
rLightSpec = "lightspec"

rMap :: String
rMap = "map"

rMap1 :: String
rMap1 = "map1"

rMap2 :: String
rMap2 = "map2"

rMapDivision :: String
rMapDivision = "mapdivision"

rMapper :: String
rMapper = "mapper"

rMaterial :: String
rMaterial = "material"

rMaxRadiance :: String
rMaxRadiance = "maxradiance"

rMesh :: String
rMesh = "mesh"

rMetalness :: String
rMetalness = "metalness"

rName :: String
rName = "name"

rNormal :: String
rNormal = "normal"

rNPhoton :: String
rNPhoton = "nphoton"

rParallelogram :: String
rParallelogram = "parallelogram"

rPhotonFilter :: String
rPhotonFilter = "photonfilter"

rPlain :: String
rPlain = "plain"

rPoint :: String
rPoint = "point"

rPolygon :: String
rPolygon = "polygon"

rPos1 :: String
rPos1 = "pos1"

rPos2 :: String
rPos2 = "pos2"

rPos3 :: String
rPos3 = "pos3"

rPosition :: String
rPosition = "position"

rPower :: String
rPower = "power"

rProgressive :: String
rProgressive = "progressive"

rRadEst :: String
rRadEst = "rad_est"

rRadiosity :: String
rRadiosity = "radiosity"

rRadius :: String
rRadius = "radius"

rReflectance :: String
rReflectance = "reflectance"

rRoughness :: String
rRoughness = "roughness"

rSamplePhoton :: String
rSamplePhoton = "samplephoton"

rScale :: String
rScale = "scale"

rScatterness :: String
rScatterness = "scatterness"

rSmoothness :: String
rSmoothness = "smoothness"

rSolid :: String
rSolid = "solid"

rSpecularRefl :: String
rSpecularRefl = "specularrefl"

rSphere :: String
rSphere = "sphere"

rSun :: String
rSun = "sun"

rSurface :: String
rSurface = "surface"

rTargetPosition :: String
rTargetPosition = "targetposition"

rTemperature :: String
rTemperature = "temperature"

rTransmittance :: String
rTransmittance = "transmittance"

rType :: String
rType = "type"

rUpperDirection :: String
rUpperDirection = "upperdirection"

rVertex :: String
rVertex = "vertex"

rVertex1 :: String
rVertex1 = "vertex1"

rVertex2 :: String
rVertex2 = "vertex2"

rVertex3 :: String
rVertex3 = "vertex3"


rXresolution :: String
rXresolution = "xresolution"

rYresolution :: String
rYresolution = "yresolution"

--
-- Parsers
--

type Param = (String, String)

pname :: String
pname = "rt parser"

charComment :: Char
charComment = '#'

{- |
>>> removeComment "abc"
"abc"
>>> removeComment "ab#"
"ab"
>>> removeComment "abc #   "
"abc "
>>> removeComment "#abc"
""
-}

removeComment :: String -> String
removeComment []     = []
removeComment (c:cs)
  | c == charComment = []
  | otherwise        = c:(removeComment cs)


--
-- SCREEN SETTINGS
--

{- |
>>> parse sline pname "xresolution : 256"
Right ("xresolution","256")
>>> parse sline pname "yresolution : 256"
Right ("yresolution","256")
>>> parse sline pname "upperdirection : [ 0.01, 0.02, 0.01 ] "
Right ("upperdirection","Vector3 1.0e-2 2.0e-2 1.0e-2")
>>> parse sline pname "ambient : [ 0.01, 0.02, 0.01 ] "
Right ("ambient","Radiance 1.0e-2 2.0e-2 1.0e-2")
>>> parse sline pname "xreso : 256"
Left "rt parser" (line 1, column 1):
unexpected 'x'
expecting "nphoton", "progressive", "xresolution", "yresolution", "antialias", "samplephoton", "mapdivision", "estimateradius", "ambient", "maxradiance", "eyeposition", "targetposition", "upperdirection", "focus", "photonfilter", space or end of input
-}

sline :: Parser Param
sline = do
  p <- (try nphoton)     <|>
       (try progressive) <|>
       (try xreso)       <|>
       (try yreso)       <|>
       (try antialias)   <|>
       (try samphoton)   <|>
       (try mapdivision) <|>
       (try estradius)   <|>
       (try ambient)     <|>
       (try maxrad)      <|>
       (try eyepos)      <|>
       (try targetp)     <|>
       (try upperd)      <|>
       (try focus)       <|>
       (try pfilt)       <|>
       (try blanc)
  return p

{- |
>>> parse nphoton pname "nphoton : 256"
Right ("nphoton","256")
>>> parse nphoton pname "nphoton :256"           -- YAML error
Left "rt parser" (line 1, column 10):
unexpected "2"
-}

nphoton :: Parser Param
nphoton = do
  _ <- string rNPhoton
  _ <- separator
  i <- integer
  _ <- blanc
  return (rNPhoton, show i)

progressive :: Parser Param
progressive = do
  _ <- string rProgressive
  _ <- separator
  b <- yesno
  _ <- blanc
  return (rProgressive, show b)

{- |
>>> parse xreso pname "xresolution : 256"
Right ("xresolution","256")
>>> parse xreso pname "xresolution: 256"
Right ("xresolution","256")
>>> parse xreso pname "xresolution      : 256"
Right ("xresolution","256")
>>> parse xreso pname "xresolution      : 256  "
Right ("xresolution","256")
>>> parse xreso pname "xresolution :256"         -- YAML error
Left "rt parser" (line 1, column 14):
unexpected "2"
-}

xreso :: Parser Param
xreso = do
  _ <- string rXresolution
  _ <- separator
  i <- integer
  _ <- blanc
  return (rXresolution, show i)

{- |
>>> parse yreso pname "yresolution : 256"
Right ("yresolution","256")
>>> parse yreso pname "yresolution: 256"
Right ("yresolution","256")
>>> parse yreso pname "yresolution      : 256"
Right ("yresolution","256")
>>> parse yreso pname "yresolution :256"         -- YAML error
Left "rt parser" (line 1, column 14):
unexpected "2"
>>> parse yreso pname "xresolution: 256"
Left "rt parser" (line 1, column 1):
unexpected "x"
expecting "yresolution"
-}

yreso :: Parser Param
yreso = do
  _ <- string rYresolution
  _ <- separator
  i <- integer
  _ <- blanc
  return (rYresolution, show i)

antialias :: Parser Param
antialias = do
  _ <- string rAntialias
  _ <- separator
  b <- yesno
  _ <- blanc
  return (rAntialias, show b)

samphoton :: Parser Param
samphoton = do
  _ <- string rSamplePhoton
  _ <- separator
  i <- integer
  _ <- blanc
  return (rSamplePhoton, show i)

mapdivision :: Parser Param
mapdivision = do
  _ <- string rMapDivision
  _ <- separator
  i <- integer
  _ <- blanc
  return (rMapDivision, show i)

estradius :: Parser Param
estradius = do
  _ <- string rEstimateRadius
  _ <- separator
  f <- float
  _ <- blanc
  return (rEstimateRadius, show f)

{- |
>>> parse ambient pname "ambient       : [ 0.001, 0.001, 0.001 ]"
Right ("ambient","Radiance 1.0e-3 1.0e-3 1.0e-3")
-}

ambient :: Parser Param
ambient = do
  _ <- string rAmbient
  _ <- separator
  r <- radiance
  _ <- blanc
  return (rAmbient, show r)

{- |
>>> parse maxrad pname "maxradiance : 0.1"
Right ("maxradiance","0.1")
-}

maxrad :: Parser Param
maxrad = do
  _ <- string rMaxRadiance
  _ <- separator
  f <- float 
  _ <- blanc
  return (rMaxRadiance, show f)

eyepos :: Parser Param
eyepos = do
  _ <- string rEyePosition
  _ <- separator
  v <- vector3
  _ <- blanc
  return (rEyePosition, show v)

targetp :: Parser Param
targetp = do
  _ <- string rTargetPosition
  _ <- separator
  v <- vector3
  _ <- blanc
  return (rTargetPosition, show v)

upperd :: Parser Param
upperd = do
  _ <- string rUpperDirection
  _ <- separator
  v <- vector3
  _ <- blanc
  return (rUpperDirection, show v)


focus :: Parser Param
focus = do
  _ <- string rFocus
  _ <- separator
  f <- float
  _ <- blanc
  return (rFocus, show f)

---------------------------------------------

--
-- SCENE INFO : WORLD
--

{-
lightspec:
  ceiling_light:
    temperature: 6500
    radiosity  : 1950
    directivity: 0.0       
    rad_est    : formula   
    direction  : out

  pana_led_ldg11dg95w:
    temperature: 6500      
    radiosity  : 48320     
    directivity: 0.0
    rad_est    : photonmap 
    direction  : out       
-}

sampleworld :: String
sampleworld = concat $ map (\x -> x ++ "\n") [
    "   "
  , "lightspec:"
  , "  ceiling_light:"
  , "    temperature: 6500"
  , "    radiosity: 1950"
  , "    directivity: 0.0"
  , "    rad_est: formula"
  , "    direction: out"
  , "   "
  , "  pana_led_ldg11dg95w:"
  , "    temperature: 3500"
  , "    radiosity: 48320"
  , "    directivity: 0.0"
  , "    rad_est: photon"
  , "    direction: in"    
  , "   "
  , "material:"
  , "  silver:"
  , "    albedo_diff: [ 0.0, 0.0, 0.0 ]"
  , "    scatterness: 0.0"
  , "    metalness: 1.0"
  , "    transmittance: [ 0.0, 0.0, 0.0 ]"
  , "    ior: [ 0.142, 0.128, 0.159 ]"
  , "    albedo_spec: [ 0.974, 0.960, 0.906 ]"
  , "    "
  , "surface:"
  , "  rough:"
  , "    roughness: 0.0"
  , "    light: ceiling_light"
  , "    "
  , "mapper:"
  , "  silverrough:"
  , "    type: solid"
  , "    map: [ silver, rough ]"
  , "  "
  , "object:"
  , "  silverball:"
  , "    type: sphere"
  , "    center: [ 0.0, 5.0, 0.0 ]"
  , "    radius: 0.8"
  , "    mapper: silverrough"
  , "   "
  , "  floor:"
  , "    type: mesh"
  , "    vertex:"
  , "      - [ 0.0 , 0.0, 0.0 ]"
  , "      - [ 1.0, 0.0 , 0.0 ]"
  , "      - [ 0.0, 0.0, 1.0 ]"
  , "    normal:"
  , "      - [ 0.0, 1.0, 0.0 ]"
  , "    uvmap:"
  , "      - [ 0.0, 0.0 ]"
  , "      - [ 1.0, 1.0 ]"
  , "    polygon:"
  , "      - [ [ 0, 0, 0 ], [ 1, 0, 0 ], [ 2, 0, 0 ] ]"
  , "    mapper: silverrough"
  , "   "
  , "scene:"
  ]

{- |
>>> let sample1 = sampleworld ++ "  - silverball\n    \n"
>>> parse world pname sample1
Right [Object {shape = Sphere {center = Vector3 0.0 5.0 0.0, radius = 0.8}, mapper = Solid (Material {albedoDiff = [0.0,0.0,0.0], scatterness = 0.0, metalness = 1.0, transmittance = [0.0,0.0,0.0], ior = [0.142,0.128,0.159], albedoSpec = [0.974,0.96,0.906]},Surface {elight = Just (LightSpec {lcolor = [0.3359011141561401,0.33472886389070683,0.329370021953153], radiosity = 2.8550512445095166, directivity = 0.0, radest = Formula, dirflag = Out, cospower = 1.0, power = 0.5, emittance0 = Radiance 0.15263196087942635 0.1520992956124355 0.14966426185249523}), roughness = 0.0, densityPow = 9.99999000001e-7, alpha = 0.0})}]
>>> let sample2 = sampleworld ++ "  - silverplain\n    \n"
>>> parse world pname sample2
Left "rt parser" (line 61, column 1):
unexpected no such an object in the scene: silverplain
expecting lf new-line or "\r\n"
-}

world :: Parser [Object]
world = do
  _  <- many (try linefeed)
  ls <- lightspec_list
  let lgtmap = M.fromList ls
  _  <- many (try linefeed)
  ms <- material_list
  let matemap = M.fromList ms
  _  <- many (try linefeed)
  ss <- surface_list lgtmap
  let sfmap = M.fromList ss
  _  <- many (try linefeed)
  mps <- mapper_list matemap sfmap
  let mapmap = M.fromList mps
  _  <- many (try linefeed)
  os <- object_list mapmap
  let objmap = M.fromList os
  _  <- many (try linefeed)
  sn <- scene
  _  <- many (try linefeed)
--  let
--    mmap = M.fromList ms
--    vmap = M.fromList vs
  scn <- V.forM (V.fromList sn) $ \o ->
    case M.lookup o objmap of
      Nothing  -> unexpected ("no such an object in the scene: " ++ o)
      Just obj -> return obj
  return $ V.toList scn

--
-- LIGHTSPEC LIST
--

{- |
>>> parse lightspec_list pname "        \nlightspec:\n   \n  ceiling:\n    color: [ 1.0, 0.7, 0.4 ]\n    radiosity: 1950\n    directivity: 0.0\n    rad_est: formula\n    direction: out\n   \n  bulb:\n    temperature: 3500\n    radiosity: 48320\n    directivity: 0.0\n    rad_est: photon\n    direction: in\n"
Right [("ceiling",LightSpec {lcolor = [0.47619047619047616,0.3333333333333333,0.19047619047619047], radiosity = 2.8550512445095166, directivity = 0.0, radest = Formula, dirflag = Out, cospower = 1.0, power = 0.5, emittance0 = Radiance 0.21637881825921765 0.15146517278145236 8.655152730368706e-2}),("bulb",LightSpec {lcolor = [0.4334078665789044,0.32723782297452636,0.23935431044656913], radiosity = 70.74670571010249, directivity = 0.0, radest = PhotonMap, dirflag = In, cospower = 1.0, power = 0.5, emittance0 = Radiance 4.880037320284739 3.6845957627160155 2.6950548382296726})]
-}

lightspec_list :: Parser [(String, LightSpec)]
lightspec_list = do
  _ <- many (try space)
  _ <- string rLightSpec
  _ <- separator2
  _ <- linefeed
  ls <- many1 (try lightspec_elem)
  return ls

{- |
>>> parse lightspec_elem pname "   \n  ceiling:\n    color: [ 1.0, 0.7, 0.4 ]\n    radiosity: 1950\n    directivity: 0.0\n    rad_est: formula\n    direction: out\n"
Right ("ceiling",LightSpec {lcolor = [0.47619047619047616,0.3333333333333333,0.19047619047619047], radiosity = 2.8550512445095166, directivity = 0.0, radest = Formula, dirflag = Out, cospower = 1.0, power = 0.5, emittance0 = Radiance 0.21637881825921765 0.15146517278145236 8.655152730368706e-2})
>>> parse lightspec_elem pname "   \n  bulb:\n    temperature: 3500\n    radiosity: 48320\n    directivity: 0.0\n    rad_est: photon\n    direction: in\n"
Right ("bulb",LightSpec {lcolor = [0.4334078665789044,0.32723782297452636,0.23935431044656913], radiosity = 70.74670571010249, directivity = 0.0, radest = PhotonMap, dirflag = In, cospower = 1.0, power = 0.5, emittance0 = Radiance 4.880037320284739 3.6845957627160155 2.6950548382296726})
-}

lightspec_elem :: Parser (String, LightSpec)
lightspec_elem = do
  _ <- many (try linefeed)
  n <- elem_name
  c <- try lcolorP <|> temperature
  r <- radiosityP
  dv <- directivityP
  re <- rad_est
  df <- dir_flag
  return (n, initLightSpec c r dv re df)

{- |
>>> parse lcolorP pname "   \n    color: [ 0.1, 0.9, 0.8 ]\n"
Right [5.555555555555556e-2,0.5,0.4444444444444445]
>>> parse lcolorP pname "   \n    color: [ 1.1, 0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected red of color is out of range: 1.1
>>> parse lcolorP pname "   \n    color: [ 0.1, -0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected green of color is out of range: -0.9
>>> parse lcolorP pname "   \n    color: [ 0.1, 0.9, 2.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected blue of color is out of range: 2.8

>>> parse rad_est pname "   \n    rad_est: photon\n"
Right PhotonMap
>>> parse rad_est pname "   \n    rad_est: formula\n"
Right Formula
>>> parse rad_est pname "   \n    rad_est: abc\n"
Left "rt parser" (line 3, column 1):
unexpected rad_est is 'photon' or 'formula'

>>> parse dir_flag pname "       \n    direction: in\n"
Right In
>>> parse dir_flag pname "       \n    direction: out\n"
Right Out
>>> parse dir_flag pname "       \n    direction: abc\n"
Left "rt parser" (line 2, column 16):
unexpected "a"
expecting "in" or "out"
>>> parse directivityP pname "       \n    directivity: 0.0\n"
Right 0.0
>>> parse directivityP pname "       \n    directivity: 1.0\n"
Right 1.0
>>> parse directivityP pname "       \n    directivity: -1.0\n"
Right (-1.0)
>>> parse directivityP pname "       \n    directivity: 1.1\n"
Left "rt parser" (line 3, column 1):
unexpected directivity (-1.0 - 1.0) is out of range: 1.1
>>> parse directivityP pname "       \n    directivity: -1.1\n"
Left "rt parser" (line 3, column 1):
unexpected directivity (-1.0 - 1.0) is out of range: -1.1
>>> parse radiosityP pname "    \n    radiosity: 0\n"
Right 0.0
>>> parse radiosityP pname "    \n    radiosity: 1000.0\n"
Right 1000.0
>>> parse radiosityP pname "    \n    radiosity: -1000\n"
Left "rt parser" (line 3, column 1):
unexpected radiosity (>= 0.0) is out of range: -1000.0

>>> parse temperature pname "    \n    temperature: 1000\n"
Right [0.789668243169042,0.2103317568309579,0.0]
>>> parse temperature pname "    \n    temperature: 6500.0\n"
Right [0.3359011141561401,0.33472886389070683,0.329370021953153]
>>> parse temperature pname "    \n    temperature: 999\n"
Left "rt parser" (line 3, column 1):
unexpected temperature (1,000 K - 40,000 K) is out of range: 999.0
>>> parse temperature pname "    \n    temperature: 40001\n"
Left "rt parser" (line 3, column 1):
unexpected temperature (1,000 K - 40,000 K) is out of range: 40001.0
-}

lcolorP :: Parser Color
lcolorP = do
  (Color r g b) <- colorparam rColor
  r' <- checkRatio r ("red of color is out of range: " ++ show r)
  g' <- checkRatio g ("green of color is out of range: " ++ show g)
  b' <- checkRatio b ("blue of color is out of range: " ++ show b)
  return $ initColor r' g' b'

temperature :: Parser Color
temperature = do
  s <- floatparam rTemperature
  if s < 1000.0 || s > 40000.0
    then unexpected ("temperature (1,000 K - 40,000 K) is out of range: " ++ show s)
    else return (initColorByKelvin s)

radiosityP :: Parser Double
radiosityP = do
  s <- floatparam rRadiosity
  if s < 0.0
    then unexpected ("radiosity (>= 0.0) is out of range: " ++ show s)
    else return s

directivityP :: Parser Double
directivityP = do
  s <- floatparam rDirectivity
  if s < (-1.0) || s > 1.0
    then unexpected ("directivity (-1.0 - 1.0) is out of range: " ++ show s)
    else return s

rad_est :: Parser RadEstimation
rad_est = do
  re <- nameparam rRadEst
  if re == "photon"
    then return PhotonMap
    else if re == "formula"
      then return Formula
      else unexpected "rad_est is 'photon' or 'formula'"

dir_flag :: Parser InOut
dir_flag = do
  _ <- many (try linefeed)
  _ <- indent2
  _ <- string rDirection
  _ <- separator
  io <- inout
  _ <- linefeed
  return io

--
-- MATERIAL LIST
--

{- |
>>> parse material_list pname "      \nmaterial:\n     \n  glass:\n    albedo_diff: [ 1.0, 1.0, 1.0 ]\n    scatterness: 0.0\n    metalness: 0.0\n    transmittance: [ 1.0, 1.0, 1.0 ]\n    ior: [ 1.467, 1.460, 1.455 ]\n    albedo_spec:\n     \n  gold:\n    albedo_diff: [ 0.0, 0.0, 0.0 ]\n    scatterness: 0.0\n    metalness: 1.0\n    transmittance: [ 0.0, 0.0, 0.0 ]\n    ior: [ 0.161, 0.346, 1.562 ]\n    albedo_spec: [ 0.964, 0.851, 0.392 ]\n"
Right [("glass",Material {albedoDiff = [1.0,1.0,1.0], scatterness = 0.0, metalness = 0.0, transmittance = [1.0,1.0,1.0], ior = [1.467,1.46,1.455], albedoSpec = [3.5834014257760616e-2,3.4965959415691715e-2,3.434945101438937e-2]}),("gold",Material {albedoDiff = [0.0,0.0,0.0], scatterness = 0.0, metalness = 1.0, transmittance = [0.0,0.0,0.0], ior = [0.161,0.346,1.562], albedoSpec = [0.964,0.851,0.392]})]
-}

material_list :: Parser [(String, Material)]
material_list = do
  _ <- many (try space)
  _ <- string rMaterial
  _ <- separator2
  _ <- linefeed
  ms <- many1 (try material_elem)
  return ms

{- |
>>> parse material_elem pname "     \n  glass:\n    albedo_diff: [ 1.0, 1.0, 1.0 ]\n    scatterness: 0.0\n    metalness: 0.0\n    transmittance: [ 1.0, 1.0, 1.0 ]\n    ior: [ 1.467, 1.460, 1.455 ]\n    albedo_spec:\n"
Right ("glass",Material {albedoDiff = [1.0,1.0,1.0], scatterness = 0.0, metalness = 0.0, transmittance = [1.0,1.0,1.0], ior = [1.467,1.46,1.455], albedoSpec = [3.5834014257760616e-2,3.4965959415691715e-2,3.434945101438937e-2]})
>>> parse material_elem pname "     \n  gold:\n    albedo_diff: [ 0.0, 0.0, 0.0 ]\n    scatterness: 0.0\n    metalness: 1.0\n    transmittance: [ 0.0, 0.0, 0.0 ]\n    ior: [ 0.161, 0.346, 1.562 ]\n    albedo_spec: [ 0.964, 0.851, 0.392 ]\n"
Right ("gold",Material {albedoDiff = [0.0,0.0,0.0], scatterness = 0.0, metalness = 1.0, transmittance = [0.0,0.0,0.0], ior = [0.161,0.346,1.562], albedoSpec = [0.964,0.851,0.392]})

-}

material_elem :: Parser (String, Material)
material_elem = do
  n <- elem_name
  ad <- albedo_diff
  s <- scatternessP
  m <- metalnessP
  t <- transmittanceP
  i <- iorP
  as <- try albedo_spec <|> noparam rAlbedoSpec Nothing
  return (n, initMaterial ad s m t i as)

{- |
>>> parse albedo_diff pname "   \n    albedo_diff: [ 0.1, 0.9, 0.8 ]\n"
Right [0.1,0.9,0.8]
>>> parse albedo_diff pname "   \n    albedo_diff: [ 1.1, 0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected red of albedo_diff is out of range: 1.1
>>> parse albedo_diff pname "   \n    albedo_diff: [ 0.1, -0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected green of albedo_diff is out of range: -0.9
>>> parse albedo_diff pname "   \n    albedo_diff: [ 0.1, 0.9, 2.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected blue of albedo_diff is out of range: 2.8
>>> parse scatterness pname "   \n    scatterness: 0.8\n"
Right 0.8
>>> parse scatterness pname "   \n    scatterness: 1.8\n"
Left "rt parser" (line 3, column 1):
unexpected scatterness (0.0 - 1.0) is out of range: 1.8
>>> parse scatterness pname "   \n    scatterness: -0.8\n"
Left "rt parser" (line 3, column 1):
unexpected scatterness (0.0 - 1.0) is out of range: -0.8
>>> parse metalnessP pname "   \n    metalness: 0.8\n"
Right 0.8
>>> parse metalnessP pname "   \n    metalness: 1.8\n"
Left "rt parser" (line 3, column 1):
unexpected metalness (0.0 - 1.0) is out of range: 1.8
>>> parse metalnessP pname "   \n    metalness: -0.8\n"
Left "rt parser" (line 3, column 1):
unexpected metalness (0.0 - 1.0) is out of range: -0.8

>>> parse transmittanceP pname "   \n    transmittance: [ 0.1, 0.9, 0.8 ]\n"
Right [0.1,0.9,0.8]
>>> parse transmittanceP pname "   \n    transmittance: [ 1.1, 0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected red of transmittance is out of range: 1.1
>>> parse transmittanceP pname "   \n    transmittance: [ 0.1, -0.9, 0.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected green of transmittance is out of range: -0.9
>>> parse transmittanceP pname "   \n    transmittance: [ 0.1, 0.9, 2.8 ]\n"
Left "rt parser" (line 3, column 1):
unexpected blue of transmittance is out of range: 2.8

>>> parse iorP pname "   \n    ior: [ 0.1, 0.9, 0.8 ]\n"
Right [0.1,0.9,0.8]
>>> parse iorP pname "   \n    ior: [ 1.1, 0.9, 0.8 ]\n"
Right [1.1,0.9,0.8]
>>> parse iorP pname "   \n    ior: [ 0.1, -0.9, 0.8 ]\n"
Right [0.1,-0.9,0.8]
>>> parse iorP pname "   \n    ior: [ 0.1, 0.9, 2.8 ]\n"
Right [0.1,0.9,2.8]
